--- a/client/src/stylesheets/home.css
+++ b/client/src/stylesheets/home.css
@@ -17,7 +17,6 @@
     right: 0;
     bottom: 0;
     font-family: 'Covered By Your Grace', cursive;
-    /* text-align: end; */
 }
 
 .text-container {
@@ -30,7 +29,6 @@
     font-size: 9rem;
     text-align: center;
     color: darkolivegreen;
-    /* margin-top: 35px; */
     text-shadow: 1px 1px  rgb(247, 246, 241);
 }
 
@@ -52,4 +50,25 @@
     color:darkolivegreen;
     font-weight: bold;
   
+}
+
+/* tablet */
+@media screen and (max-width: 768px){
+    .text-container h1{
+        font-size: 7rem;
+    }
+
+    .text-container a {
+        font-size: 2.3rem;
+    }
+}
+
+/* mobile */
+@media screen and (max-width: 480px){
+    .text-container h1{
+        font-size: 4.3rem;
+    }
+    .text-container a {
+        font-size: 1.8rem;
+    }
 }
